test/domains/bradc/assignConstDom.good
assignConstDom.chpl:1: In function 'foo':
assignConstDom.chpl:2: error: const actual is passed to 'ref' formal 'a' of =
note: to formal of type domain(1,int(64),false)
  assignConstDom.chpl:11: called as foo(x: domain(1,int(64),false))
